# rhostname

./: .gitignore  Cargo.toml  Q&A  QA.md  README.en.md  README.md  build.rs  rhostname.spec
src/: lib.c  lib.rs  main.rs
tests/: hostname  output_test.sh  speed_test.sh  test.rs
