[package]
name = "uthostname"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
dns-lookup = "2.0.4"
libc = "0.2.155"
local-ip-address = "0.6.1"

[build-dependencies]
cc = "1.1.8"
