[package]
name = "rhostname"
license = "MulanPSL2"
authors = ["insorker"]
version = "0.1.0"
edition = "2021"
description = "A tool used to perform a series of operations on usernames. It is a reconstruction of the hostname command using Rust."
hompage = "https://gitee.com/openeuler/rhostname"
readme = "README.md"
repository = "https://gitee.com/openeuler/rhostname"
keywords = ["linux", "hostname", "rhostname"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
dns-lookup = "2.0.4"
libc = "0.2.158"

[build-dependencies]
cc = "1.1.21"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/rhostname", dest = "/usr/bin/rhostname", mode = "0755" },
  { source = "LICENSE", dest = "/usr/share/doc/rhostname/LICENSE", doc = true, mode = "0644" },
  { source = "README.md", dest = "/usr/share/doc/rhostname/README.md", doc = true, mode = "0644" }
]
